[package]
name = "gmtk_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "=0.2.84"
bevy = "0.7"
log = "0.4"
wasm-logger = "0.2"

[dependencies.web-sys]
version = "0.3.57"
features = [
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
]

[profile.release]
lto = true